Fix page scale limit errors in layout tests

Adding DCHECKs in LayerTreeHost::SetPageScaleFactorAndLimits shows that
we sometimes set inconsistent limits and page scale factor. This shows
up in Blink for two reasons, fixed in this patch:

1. When we finish running a layout test, we call
Internals::ResetToConsistentState which calls SetPageScaleFactor(1). If
the test modified the limits this may not be a valid scale factor. We
now reset the limits in this method as well.

2. Some tests set the page scale factor without regard for the default
limits. The default limits in layout tests are [1, 4] so many tests that
tried setting scale factors < 1.0 would silently fail to do so. This CL
fixes these tests by changing the limits appropriately.

As a result of #2, behavior on some tests has changed as they now
actually run using the scale factor they purported to set. This required
rebaselining tests in compositing/layer-creation since the root layer
size depends on the minimum-scale which is now changed.
zoom-scroll-page-test.html also needed a small change to increase the
amount of scrollable content. Without this change, zooming out makes
some of the requested scroll positions outside the maximum scroll
position.

Finally, this CL actually ensures the Blink only clamps the page scale
factor before setting it. This also revealed that all unit tests based
on PageTestBase were running without scale factor limits set.

Bug: 810573
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel
Change-Id: I4f662777da82c8f33263a0eb05f49958f3112e45
Reviewed-on: https://chromium-review.googlesource.com/913972
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Khushal <khushalsagar@chromium.org>
Commit-Queue: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536922}
Former-commit-id: 9f6f4b570a323c115bab307d14c02005035abcbd